# PC_Engine_RP2040_Projects

./: README.md
PCEMouse/release/: pcemouse_kb2040_sens_20220709.uf2  pcemouse_kb2040_sens_20230312.uf2  pcemouse_qtpy_sens_20220709.uf2
PCEMouse/src/: CMakeLists.txt  hid_app.c  main.c
PCFXMouse/: Assembly.md  Readme.md
PCFXMouse/EAGLE/PCFXMouse/rev_D/: BOM.csv  PCFX_Mouse_rev_D.brd  PCFX_Mouse_rev_D.sch  assembly.csv  eagle.epf
PCFXMouse/EAGLE/PCFX_Contrl_Socket/rev_C/: PCFX_Contrl_Socket_rev_C.brd
PCFXMouse/release/: pcfxmouse_20221009.uf2  pcfxmouse_kb2040_20221031.uf2  pcfxmouse_kb2040_20221106.uf2  pcfxmouse_kb2040_20230312.uf2
PCFXMouse/src/: CMakeLists.txt  build_kb2040.sh  build_xiao.sh  hid_app.c  main.c
XE1AP/: Readme.md
XE1AP/EAGLE/MSX_X68K_PC-98/: BOM.csv  JPC_XE1AP_rev_A.brd  JPC_XE1AP_rev_A.sch  assembly_adjusted.csv
XE1AP/release/: pcexe1ap.uf2  pcexe1ap_20221002.uf2  pcexe1ap_20230312.uf2
XE1AP/src/: CMakeLists.txt  build.sh  build_ada_kb2040.sh  clock.pio  hid_app.c  main.c  multplex.pio  protocol.pio
